Fixed spacing on image

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 body, html, main {
     /* important */
     height: 100%;
-    margin: 0;
+/*    margin: 0;*/
     color: #212121;
 }
 
@@ -11,17 +11,22 @@ div {
 }
 
 div#title {
+    width: 100%;
     position: absolute; 
     top: 40%;
     color: #FFEB3B;
 }
 
-h1, h3 {
+h1, h4 {
     text-align: center;
 }
 
 h1 {
     font-size: 6vw;
+}
+
+h4 {
+    font-size: 1.5vw;
 }
 
 p {
@@ -33,16 +38,28 @@ p {
 
 img#profile {
     display: block;
-    margin: auto;
+/*    margin: auto;*/
+    margin-top: 10%;
+    margin-left: auto;
+    margin-right: auto;
+/*    height: 100%;*/
 }
 
-@media only screen and (max-width: 500px) { 
+@media only screen and (max-width: 768px) { 
     img#profile {
-        height: 180px;
+/*        height: 180px;*/
     }
     div#title {
-        position: relative; 
+        width: 100%;
         color: #FFEB3B;
+    }
+    
+    h1 {
+    font-size: 10vw;
+    }
+    
+    h4 {
+        font-size: 2.5vw;
     }
 }
 
